fixed media queries so that links are centered on mobile device

--- a/src/App.css
+++ b/src/App.css
@@ -95,10 +95,14 @@ button {
   color:rgb(41, 39, 39);
 }
 
-/* App names */
+/* Page title */
 .project-container h2 {
   padding: 1% 2% 0% 2%;
 
+}
+
+.projects a:hover {
+  font-size: 50px;
 }
 
 /* Technologies used */
@@ -109,8 +113,16 @@ button {
 }
 
 .tech-stack p {
-  color: white;
+  color: rgb(41, 39, 39);
   font-size: 20px;
+}
+
+.tech-stack a {
+  font-size: 20px;
+}
+
+.tech-stack a:hover {
+  font-size: 30px;
 }
 
 .recipes-app {
@@ -239,14 +251,13 @@ iframe {
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
-
   background-color: aliceblue;
 
 }
 
 .landing-container img {
   border-radius: 3px;
-  width: 25%;
+  width: 20%;
   filter: drop-shadow(10px 20px 5px rgb(203, 221, 237));
 
 }
@@ -286,22 +297,30 @@ iframe {
   /* The typing effect */
   @keyframes typing {
     from { width: 0 }
-    to { width: 100% }
+    to { width: 80% }
   }
 
   /* The typewriter cursor effect */
   @keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: orange; }
+    50% { border-color: rgb(168, 99, 145); }
   }
   /*THIS IS A TEST*/
+
+  .landing-links {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   .landing-links a {
     color:aliceblue;
     background-color: rgb(32, 55, 69);
     padding: 3% 10%;
-    margin: 3% 25%;
+    margin: 3% 0%;
     display:flex;
-    justify-content: space-evenly;
+    justify-content: center;
     border-radius: 5px;
     width: 25%;
     opacity: 50%;
@@ -353,16 +372,17 @@ iframe {
       .landing-container {
         padding: 30% 5%;
         display: flex;
-        flex-direction: column;
+        flex-flow: column wrap;
         justify-content: center;
+        align-items:center;
 
     }
-
-      .landing-container img {
-        width: 200px;
-        height: 200px;
+      .landing-links {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items:center;
       }
-
       .landing-links a{
         padding: 5% 40%;
         margin: 4% 20% 0% 0%; 
